Bug 427243 - Discover does not find certain apps from flathub
Summary: Discover does not find certain apps from flathub
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Flatpak Backend (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-02 12:26 UTC by Patrick Silva
Modified: 2021-01-14 19:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-10-02 12:26:53 UTC
SUMMARY
Reproducible on both Arch (Plasma 5.20 beta) and neon unstable.

STEPS TO REPRODUCE
1. open Discover
2. search for filezilla or supertuxkart
3. 

OBSERVED RESULT
Discover only finds the package from distro repos,
"Sources" combobox is not available in the description page of the searched app.

EXPECTED RESULT
Discover should find flatpak version of the searched app

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.0
Comment 1 Aleix Pol 2020-10-02 19:14:22 UTC
Git commit 4f95009b9ee82ad0c0d81c28b741391d96c48193 by Aleix Pol.
Committed on 02/10/2020 at 19:13.
Pushed by apol into branch 'master'.

flatpak: take into account alternative names when searching

M  +10   -1    libdiscover/backends/FlatpakBackend/FlatpakBackend.cpp

https://invent.kde.org/plasma/discover/commit/4f95009b9ee82ad0c0d81c28b741391d96c48193
Comment 2 Aleix Pol 2020-10-02 19:15:38 UTC
I can reproduce, the fix above fixes part of the issue but not entirely.
Comment 3 Aleix Pol 2020-12-01 18:35:46 UTC
This should be fixed already, it was a combination of the problem I fixed back then and an issue in kirigami that Arjen addressed.

Re-open if it's still not working for you.
Comment 4 Patrick Silva 2020-12-09 11:04:19 UTC
This bug is still reproducible.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.20.80
KDE Frameworks Version: 5.77.0
Qt Version: 5.15.2
Comment 5 Aleix Pol 2021-01-14 19:21:51 UTC
Git commit a5d74c7ab7b6970de5f10945a796b5056dc50035 by Aleix Pol.
Committed on 14/01/2021 at 19:19.
Pushed by apol into branch 'master'.

Do not preemtively filter resources by their url

Backends will need to make sure that no wrong resources are offered.
This is necessary because when we query by appstream id we might have to
return some resources where we match on their alternative names rather
than the actual.

M  +0    -3    libdiscover/resources/AbstractResourcesBackend.cpp

https://invent.kde.org/plasma/discover/commit/a5d74c7ab7b6970de5f10945a796b5056dc50035