Do not preemtively filter resources by their url

Backends will need to make sure that no wrong resources are offered.
This is necessary because when we query by appstream id we might have to
return some resources where we match on their alternative names rather
than the actual.

BUG: 427243